# r3sizer

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: audit.yml  ci.yml  deploy.yml
crates/imgsharp-cli/: Cargo.toml
crates/imgsharp-cli/src/: args.rs  main.rs  output.rs  run.rs  sweep.rs
crates/imgsharp-core/: Cargo.toml
crates/imgsharp-core/benches/: pipeline_bench.rs
crates/imgsharp-core/src/: color.rs  contrast.rs  fit.rs  lib.rs  metrics.rs  pipeline.rs  resize.rs  sharpen.rs  solve.rs  types.rs
crates/imgsharp-core/tests/: integration.rs
crates/imgsharp-io/: Cargo.toml
crates/imgsharp-io/src/: convert.rs  lib.rs  load.rs  save.rs
crates/imgsharp-wasm/: Cargo.toml
crates/imgsharp-wasm/src/: convert.rs  lib.rs
crates/r3sizer/: Cargo.toml  README.md
crates/r3sizer-cli/: Cargo.toml
crates/r3sizer-cli/src/: args.rs  corpus.rs  diff.rs  main.rs  output.rs  presets.rs  run.rs  sweep.rs
crates/r3sizer-core/: Cargo.toml  README.md
crates/r3sizer-core/benches/: kernel_bench.rs  pipeline_bench.rs  profile_e2e.rs
crates/r3sizer-core/src/: base_quality.rs  chroma_guard.rs  classifier.rs  color.rs  color_space.rs  contrast.rs  evaluator.rs  fit.rs  lib.rs  metrics.rs  paper_sharpen.rs  pipeline.rs  prelude.rs  recommendations.rs  resize.rs  resize_strategy.rs  sharpen.rs  solve.rs  types.rs
crates/r3sizer-core/src/metrics/: composite.rs  edges.rs  gamut.rs  halo.rs  mod.rs  overshoot.rs  texture.rs
crates/r3sizer-core/tests/: experimental.rs  integration.rs  typegen.rs
crates/r3sizer-io/: Cargo.toml  README.md
crates/r3sizer-io/examples/: custom_params.rs  single_file.rs  two_phase.rs
crates/r3sizer-io/src/: convert.rs  lib.rs  load.rs  save.rs
crates/r3sizer-wasm/: Cargo.toml
crates/r3sizer-wasm/src/: convert.rs  lib.rs
crates/r3sizer/src/: args.rs  corpus.rs  diff.rs  main.rs  output.rs  presets.rs  run.rs  sweep.rs
crates/r3sizer/tests/: cli.rs
docs/: algorithm.md  assumptions.md  auto_sharpness_algorithm_reconstruction.md  cli.md  future_work.md  lightness_linear_srgb_summary.md  perf-optimization-plan.md  pipeline_implementation.md
docs/plans/: implementation_plan.md  r3sizer_downscaling_research_roadmap.md  v04_experimental_test_strategy.md
docs/results/adaptive-pipeline/architecture/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/compressed-web/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/foliage-texture/: basiline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/low-light-noisy/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/mixed-street/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/portrait-skin/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/saturated-scene/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/adaptive-pipeline/screenshot-text/: baseline.json  photo.json  precision.json  v3-adaptive.json  v5-full.json  v5-twopass.json
docs/results/v04/test1/: baseline-color.json  baseline-detail.json
docs/results/v04/test2/: eval-lab-color-rgb-mode.json  eval-lab-color.json  eval-luma-color-rgb-mode.json  eval-luma-color.json  eval-rgb-color.json
docs/results/v04/test3/: chroma-guard-color.json  chroma-guard-loose-color.json  chroma-guard-tight-color.json
docs/results/v04/test4/: resize-adaptive-detail.json  resize-catmull-detail.json  resize-gaussian-detail.json  resize-mitchell-detail.json
docs/results/v04/test5/: ingress-linear-color.json  ingress-raw-color.json  ingress-srgb-color.json
docs/results/v04/test6/: evaluator-color.json  evaluator-detail.json
docs/results/v04/test7/: all-feature-color.json
docs/superpowers/plans/: 2026-03-27-fix-arch-issues.md  2026-03-28-content-adaptive-sharpening.md  2026-03-28-v02-composite-metrics.md  2026-03-29-design-fixes.md  2026-03-30-hybrid-selection-policy.md
docs/superpowers/specs/: 2026-03-28-content-adaptive-sharpening-design.md  2026-03-28-v02-composite-metrics-design.md  2026-03-29-evaluator-recommendations-design.md
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/locales/: en.json  ru.json
web/src/: App.tsx  index.css  main.tsx  probe-pool.ts  probe-worker.ts  router.tsx  wasm-worker.ts  wasm.ts
web/src/components/: AppHeader.tsx  BlurText.tsx  DiagnosticsPanel.tsx  DownloadButton.tsx  ErrorBoundary.tsx  ImagePreview.tsx  ImageUpload.tsx  LogoMark.tsx  ParameterPanel.tsx  ProbeChart.tsx  ProcessingOverlay.tsx  ShinyText.tsx  StatusBar.tsx  StatusIndicators.tsx  TimingBar.tsx  Toolbar.tsx  WelcomeHero.tsx
web/src/components/diagnostics/: AdviceTab.tsx  FitTab.tsx  JsonViewer.tsx  SummaryTab.tsx  shared.tsx  utils.ts
web/src/components/params/: AdaptiveSettings.tsx  NumericInput.tsx  constants.ts  helpers.tsx
web/src/components/ui/: button.tsx  input.tsx  select.tsx  tooltip.tsx
web/src/hooks/: useThrottledParams.ts
web/src/lib/: i18n.ts  image-loader.ts
web/src/pages/: AlgorithmPage.tsx
web/src/stores/: processor-store.ts
web/src/types/: generated.ts  wasm-types.ts
