[workspace]
members = [
    "crates/r3sizer-core",
    "crates/r3sizer-io",
    "crates/r3sizer-cli",
    "crates/r3sizer-wasm",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
approx      = "0.5"
criterion   = { version = "0.5", features = ["html_reports"] }
image       = { version = "0.25", default-features = false }
web-time    = "1"
ts-rs       = { version = "12", features = ["serde-compat"] }
