[workspace]
members = [
    "crates/r3sizer-core",
    "crates/r3sizer-io",
    "crates/r3sizer-cli",
    "crates/r3sizer-wasm",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
approx      = "0.5"
criterion   = { version = "0.5", features = ["html_reports"] }
image       = { version = "0.25", default-features = false }
fast_image_resize = "6"
web-time    = "1"
ts-rs       = { version = "12", features = ["serde-compat"] }

# ---------------------------------------------------------------------------
# Release profile — critical for WASM binary size
# ---------------------------------------------------------------------------
[profile.release]
lto = "thin"           # cross-crate dead-code elimination (strips unused fir/serde monomorphs)
codegen-units = 1      # better optimization at the cost of compile time
strip = true           # strip debug symbols
