[package]
name    = "imgsharp-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "CLI for automatic-sharpness image downscaling"

[[bin]]
name = "imgsharp"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
serde_json    = { workspace = true }
imgsharp-core = { path = "../imgsharp-core" }
imgsharp-io   = { path = "../imgsharp-io" }
