[package]
name    = "imgsharp-io"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Image I/O layer: load PNG/JPEG into LinearRgbImage, save back to file"

[dependencies]
thiserror     = { workspace = true }
serde_json    = { workspace = true }
image         = { workspace = true, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
imgsharp-core = { path = "../imgsharp-core" }
