[package]
name    = "imgsharp-wasm"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "WebAssembly bindings for imgsharp-core image processing pipeline"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { workspace = true }
serde_json         = { workspace = true }
serde-wasm-bindgen = "0.6"
imgsharp-core      = { path = "../imgsharp-core", default-features = false }
