[package]
name    = "r3sizer-cli"
version = "0.8.0"
edition = "2021"
license.workspace = true
description = "CLI for automatic-sharpness image downscaling"

[[bin]]
name = "r3sizer"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
serde         = { workspace = true }
serde_json    = { workspace = true }
glob          = "0.3"
r3sizer-core = { path = "../r3sizer-core" }
r3sizer-io   = { path = "../r3sizer-io" }
