[package]
name                   = "r3sizer-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Pure image processing core: linear color, downscale, sharpen, artifact metric, polynomial fit and solve"
readme                 = "README.md"
keywords               = ["image", "resize", "downscale", "sharpen"]
categories             = ["multimedia::images"]

[features]
default     = ["parallel", "formats"]
parallel    = ["rayon", "image/rayon"]
formats     = ["image/png", "image/jpeg", "image/gif", "image/bmp", "image/tiff", "image/webp"]
typegen     = ["ts-rs"]

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
image       = { workspace = true }
fast_image_resize = { workspace = true }
rayon       = { version = "1", optional = true }
web-time    = { workspace = true }
ts-rs       = { workspace = true, optional = true }

[dev-dependencies]
approx      = { workspace = true }
criterion   = { workspace = true }
serde_json  = { workspace = true }

[[bench]]
name    = "pipeline_bench"
harness = false

[[bench]]
name    = "kernel_bench"
harness = false

[[bench]]
name    = "profile_e2e"
harness = false
