[package]
name                   = "r3sizer-io"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Image I/O layer: load PNG/JPEG into LinearRgbImage, save back to file"
readme                 = "README.md"
keywords               = ["image", "io", "linear-rgb", "srgb"]
categories             = ["multimedia::images"]

[dependencies]
thiserror     = { workspace = true }
serde_json    = { workspace = true }
image         = { workspace = true, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
r3sizer-core  = { path = "../r3sizer-core", version = "0.8" }

[dev-dependencies]
tempfile = "3"
