[package]
name    = "r3sizer-wasm"
version = "0.6.0"
edition = "2021"
license.workspace = true
description = "WebAssembly bindings for r3sizer-core image processing pipeline"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { workspace = true }
serde_json         = { workspace = true }
serde-wasm-bindgen = "0.6"
r3sizer-core      = { path = "../r3sizer-core", default-features = false }
