[package]
name    = "r3sizer"
version = "0.8.0"
edition = "2021"
license.workspace = true
description = "CLI for automatic-sharpness image downscaling"

[[bin]]
name = "r3sizer"
path = "src/main.rs"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
image       = { workspace = true, features = ["png"] }
serde_json  = { workspace = true }

[dependencies]
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
serde         = { workspace = true }
serde_json    = { workspace = true }
glob          = "0.3"
r3sizer-core = { path = "../r3sizer-core" }
r3sizer-io   = { path = "../r3sizer-io" }
