[package]
name                   = "r3sizer"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "CLI for automatic-sharpness image downscaling"
readme                 = "README.md"
keywords               = ["image", "resize", "cli", "downscale", "sharpen"]
categories             = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "r3sizer"
path = "src/main.rs"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
image       = { workspace = true, features = ["png"] }
serde_json  = { workspace = true }

[dependencies]
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
serde         = { workspace = true }
serde_json    = { workspace = true }
glob          = "0.3"
r3sizer-core  = { path = "../r3sizer-core", version = "0.8" }
r3sizer-io    = { path = "../r3sizer-io",   version = "0.8" }
